# myFirstLLM

frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.module.css  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/app/components/: TripSummaryCard.tsx
itinerary-agent/: .env  agent.py  pyproject.toml  server.py
