[project]
name = "itinerary-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag-ui-langgraph>=0.0.36",
    "copilotkit>=0.1.90",
    "fastapi>=0.136.3",
    "langchain-google-genai>=4.2.3",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
]
